--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    font-family: 'Work Sans', sans-serif;
+}
+
 .custom {
 
     position: absolute;
